@@ -59,6 +59,7 @@ Support for adding custom validation logic to StreamField blocks has been formal
  * Ensure that document search results count shows the correct all matches, not the paginate total (Andy Chosak)
  * Fix radio and checkbox elements shrinking when using a long label (Sage Abdullah)
  * Fix select elements expanding beyond their container when using a long option label (Sage Abdullah)
+ * Fix timezone handling of `TemplateResponse`s for users with a custom timezone (Stefan Hammer, Sage Abdullah)
 
 ### Documentation
 
